--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
 <ul>
     <li><a href="/member/sign-up">회원가입</a></li>
     <li><a href="/member/sign-in">로그인</a></li>
-    <li><a href="/board">게시판</a></li>
+    <li><a href="/board/1">게시판</a></li>
 </ul>
 </body>
 </html>
